# gophermaps-data

./: .gitignore  README.md  manifest.json
.github/workflows/: manifest-generator.yml  process-instructions.yml  webhook-test.yml
aws/: Dockerfile  lambda_function.py  notion-webook-handler.py  requirements.txt
aws/processInstructionsLambda/: lambda-function.py
csv-buildings/: East Bank-edges.csv  GopherMaps Buildings - East Bank South Building Edges.csv  GopherMaps Buildings - East Bank South Buildings.csv  GopherMaps Buildings - St Paul Edges.csv  GopherMaps Buildings - St Paul block B Edges.csv  GopherMaps Buildings - St Paul block B.csv  GopherMaps Buildings - West Bank.csv  St Paul Campus-edges.csv  Test Buildings-edges.csv  West Bank-edges.csv  generate-edge-list.py  pyproject.toml  upload-db.py
instructions/: README.md
instructions/TEST PAGE/: instructions.md
instructions/boynton2-mayo1/: instructions.md
instructions/coffmanB-mayo1/: instructions.md
notion-publisher/: notion-publisher.py
osm/: finishedMap.osm  pts-gw-map.png.cal
scripts/: generate_manifest.py  process_instructions.py
scripts/csv-buildings/: GopherMaps Buildings - St Paul.csv  GopherMaps Buildings - West Bank Edges.csv  GopherMaps Buildings - West Bank.csv  GopherMaps Mapping - East Bank.csv  GopherMaps Mapping - St Paul Campus.csv  GopherMaps Mapping - West Bank.csv  GopherMaps Place IDs - GopherMaps Mapping - East Bank.csv  GopherMaps Place IDs - GopherMaps Mapping - St Paul Campus.csv  GopherMaps Place IDs - GopherMaps Mapping - West Bank.csv  README.md  get-all-buildings.py  pyproject.toml  set-place-ids.py
scripts/notion-publisher/: pyproject.toml
scripts/notion-publisher/notion2md-output/: 13e5af49-bf2f-816f-b4c6-f5c8b073b3e1.md
scripts/notion2md-tests/: main.py  pyproject.toml
scripts/notion2md-tests/test1/: instructions.md
serverMessages/: awsTransition.json  eastBankFix.json  expired.json  southEastBank.json  welcome.json
thumbnails/: README.md
webhook-icons/: README.md
(+9 files in other folders)
