[tool.poetry]
name = "csv-buildings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
