[tool.poetry]
name = "notion-publisher"
version = "0.1.0"
description = ""
authors = ["Ryan <roche189@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notion2md = "^2.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
